Bug 1586444 - Avoid styling scrollbar part children of object elements with vertical-align. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D53124

UltraBlame original commit: 44a3e5f050de4aff4e3080532319595185f1db3a

--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -76,6 +76,11 @@ scrollcorner, resizer, scrollbar, scrollbarbutton, slider {
   
 
 
+  vertical-align: initial !important;
+
+  
+
+
 
 
 
